Bookmark apps created from extension pages no longer show location bar.

Fixed a regression introduced by r537588 which showed a location bar on
all non-https pages. Extension pages are secure, but have scheme
chrome-extension, so did not pass this test. Now chrome-extension pages
are special-cased to be allowed without a location bar.

Bug: 828233
Change-Id: Ic792007ddb8d8d29ab0dc0b82500e4833f6f2c7c
Reviewed-on: https://chromium-review.googlesource.com/991932
Commit-Queue: Matt Giuca <mgiuca@chromium.org>
Reviewed-by: Ben Wells <benwells@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548372}
Former-commit-id: 422968098ba7d946bd528ecc633cfe0e33cf1227